force-app/main/default/objects/Attendee_Questionnaire__c/Attendee_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Attendee Questionnaire</label>
    <nameField>
        <displayFormat>AQ-{00000}</displayFormat>
        <label>Attendee Questionnaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendee Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>