force-app/main/default/objects/Attendee_Questionnaire__c/fields/Contact_with_Person_Outside_of_Canada__c.field-meta.xml
<CustomField>
    <fullName>Contact_with_Person_Outside_of_Canada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact with Person Outside of Canada</label>
    <type>Checkbox</type>
</CustomField>