force-app/main/default/objects/Attendee_Questionnaire__c/fields/Experiencing_Chest_Tightening_Discomfort__c.field-meta.xml
<CustomField>
    <fullName>Experiencing_Chest_Tightening_Discomfort__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experiencing Chest Tightening/Discomfort</label>
    <type>Checkbox</type>
</CustomField>