force-app/main/default/objects/Attendee_Questionnaire__c/fields/Experiencing_Decreased_smell_or_taste__c.field-meta.xml
<CustomField>
    <fullName>Experiencing_Decreased_smell_or_taste__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experiencing Decreased smell or taste</label>
    <type>Checkbox</type>
</CustomField>