force-app/main/default/objects/Attendee_Questionnaire__c/fields/Experiencing_Fatigue__c.field-meta.xml
<CustomField>
    <fullName>Experiencing_Fatigue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experiencing Fatigue</label>
    <type>Checkbox</type>
</CustomField>