force-app/main/default/objects/Attendee_Questionnaire__c/fields/Experiencing_Muscle_Aches__c.field-meta.xml
<CustomField>
    <fullName>Experiencing_Muscle_Aches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experiencing Muscle Aches/Joint Pain</label>
    <type>Checkbox</type>
</CustomField>