force-app/main/default/objects/Attendee_Questionnaire__c/fields/Experiencing_Shortness_of_Breath__c.field-meta.xml
<CustomField>
    <fullName>Experiencing_Shortness_of_Breath__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experiencing Shortness of Breath</label>
    <type>Checkbox</type>
</CustomField>