force-app/main/default/objects/Attendee_Questionnaire__c/fields/Living_with_people_experiencing_symptoms__c.field-meta.xml
<CustomField>
    <fullName>Living_with_people_experiencing_symptoms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is anyone you live with currently experiencing any new COVID-19 symptoms and/or waiting for test results after experiencing symptoms? If you are fully vaccinated, select no. (If the individual received a COVID-19 vaccine in the past 48 hours, select no)</description>
    <label>Living with people experiencing symptoms</label>
    <type>Checkbox</type>
</CustomField>