force-app/main/default/objects/Attendee_Questionnaire__c/fields/Living_with_person_having_positive_test__c.field-meta.xml
<CustomField>
    <fullName>Living_with_person_having_positive_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Living with person having positive test</label>
    <type>Checkbox</type>
</CustomField>