force-app/main/default/objects/Attendee_Questionnaire__c/fields/Living_with_person_waiting_on_results__c.field-meta.xml
<CustomField>
    <fullName>Living_with_person_waiting_on_results__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Living with person waiting on results</label>
    <type>Checkbox</type>
</CustomField>