force-app/main/default/objects/Attendee_Questionnaire__c/fields/Proof_of_Vaccination_Provided__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Vaccination_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if attendee showed proof of their vaccination to enter a public course</description>
    <label>Proof of Vaccination Provided</label>
    <type>Checkbox</type>
</CustomField>