force-app/main/default/objects/Attendee_Questionnaire__c/fields/Received_Covid_Exposure_Alert_In_14_Days__c.field-meta.xml
<CustomField>
    <fullName>Received_Covid_Exposure_Alert_In_14_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have you received a COVID Alert Exposure notification on your cell phone in the last 14 days (and have not been tested or waiting for your result)? If you are fully vaccinated or have received a negative test result, select no.</description>
    <label>Received Covid Exposure Alert In 14 Days</label>
    <type>Checkbox</type>
</CustomField>