force-app/main/default/objects/Attendee_Questionnaire__c/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <label>Symptoms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Covid_Symptoms</valueSetName>
    </valueSet>
</CustomField>