force-app/main/default/objects/Attendee_Questionnaire__c/fields/Told_To_Isolate_By_Health_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Told_To_Isolate_By_Health_Advisor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has a doctor, health care provider or public health unit told you that you should currently be isolating (staying at home)? (Because of outbreak or contact tracing)</description>
    <label>Told To Isolate By Health Advisor</label>
    <type>Checkbox</type>
</CustomField>