force-app/main/default/objects/Attendee_Questionnaire__c/recordTypes/Covid.recordType-meta.xml
<RecordType>
    <fullName>Covid</fullName>
    <active>true</active>
    <description>Used for contact tracing for attendees</description>
    <label>Covid</label>
</RecordType>